--- a/styles/common.scss
+++ b/styles/common.scss
@@ -26,7 +26,7 @@ html{
   font-size: 14px;
 }
 body{
-  background: url(../assets/math.png) fixed top left;
+  background: url(../assets/math0.png) fixed top left;
   // background-repeat: no-repeat;
   // background-size: 100% 100%;
   position: relative;
@@ -60,10 +60,34 @@ body::after{
   width: 19%;
 }
 .page-middle{
-  width: 60%;
-  margin-left: 20%;
+  width: 50%;
+  margin-left: 25%;
   height: 100px;
-  background: #cccccc;
+  // background: #cccccc;
+}
+.nav-btn{
+  position: fixed;
+  bottom: 10%;
+  right: 20%;
+  width: 50px;
+  // height: 100px;
+  // background: #cccccc;
+}
+.nav-btn-list{
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  background: #ffffff;
+  border-radius: 50%;
+  margin-bottom: 10px;
+  text-align: center;
+  color: #409EFF;
+  cursor: pointer;
+  transition: .5s;
+}
+.nav-btn-list:hover{
+  background: #409EFF;
+  color: #ffffff;
 }
 .iconfont{
   margin-right: 5px;
@@ -85,4 +109,48 @@ body::after{
     url('../assets/fonts/monaco.svg') format('svg');
   font-weight: normal;
   font-style: normal;
+}
+
+// md语法code解析
+.code-pre{
+  position: relative;
+  margin: 10px 0;
+  width: 100%;
+  background: rgba($color: #ebebeb, $alpha: 0.5);
+  overflow: hidden;
+  code{
+    float: left;
+    width: 93%;
+    margin-left: 6%;
+    overflow: auto;
+    line-height: 20px;
+  }
+  code::-webkit-scrollbar{
+    // width: 6px;
+    height: 6px;
+    // background: #409EFF;
+  }
+  code::-webkit-scrollbar-thumb{
+    border-radius: 6px;
+    background: #ebebeb;
+  }
+}
+.code-lines{
+  position: absolute;
+  left: 0;
+  padding-bottom: 6px;
+  width: 5%;
+  background: rgba($color: #ebebeb, $alpha: 1);
+  // top: 2.8em;
+  // margin: 0;
+  // padding: 1em 0;
+  // width: 2.5em;
+  // height: calc(100% - 2.8em);
+  // text-align: center;
+  // background-color: rgba(0,0,0,.2);
+  .code-line-number{
+    padding-top: 3.5px;
+    // width: 30px;
+    text-align: center;
+  }
 }
