--- a/styles/common.scss
+++ b/styles/common.scss
@@ -22,7 +22,7 @@ html,body{
   height: 100%;
 }
 html{
-  font-family: 'monaco', 'Source Sans Pro', -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'monaco', 'PingFang', 'Source Sans Pro', -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
   font-size: 16px;
 }
 body{
@@ -64,6 +64,7 @@ body::after{
   position: relative;
   width: 850px;
   min-height: calc(100vh - 180px);
+  margin-top: 20px;
   margin-left: 80px;
   padding-bottom: 100px;
 }
@@ -118,12 +119,18 @@ body::after{
 /*声明 WebFont*/
 @font-face {
   font-family: 'monaco';
-  src: url('../assets/fonts/monaco.eot');
-  src:
-    url('../assets/fonts/monaco.eot?#font-spider') format('embedded-opentype'),
-    url('../assets/fonts/monaco.woff') format('woff'),
-    url('../assets/fonts/monaco.ttf') format('truetype'),
-    url('../assets/fonts/monaco.svg') format('svg');
+  src: url('../assets/fonts/monaco.ttf') format('truetype');
+  // src:
+  //   url('../assets/fonts/monaco.eot?#font-spider') format('embedded-opentype'),
+  //   url('../assets/fonts/monaco.woff') format('woff'),
+  //   url('../assets/fonts/monaco.ttf') format('truetype'),
+  //   url('../assets/fonts/monaco.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'PingFang';
+  src: url('../assets/fonts/PingFangLight.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
