--- a/styles/common.scss
+++ b/styles/common.scss
@@ -22,7 +22,7 @@ html,body{
   height: 100%;
 }
 html{
-  font-family: 'monaco', 'PingFang', 'Source Sans Pro', -apple-system, 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'monaco', 'Heiti SC', 'Hiragino Sans GB', 'PingFang', Arial, sans-serif;
   font-size: 16px;
 }
 body{
@@ -59,14 +59,19 @@ body::after{
   top: 10%;
   left: 5%;
   width: 50px;
+  z-index: 999;
 }
-.page-list{
+.page-main{
   position: relative;
-  width: 850px;
+  // width: 850px;
   min-height: calc(100vh - 180px);
   margin-top: 20px;
-  margin-left: 80px;
+  // margin-left: 80px;
   padding-bottom: 100px;
+}
+.article-list{
+  width: 800px;
+  margin: 0 auto;
 }
 .article-pagigation{
   text-align: center;
@@ -130,7 +135,12 @@ body::after{
 }
 @font-face {
   font-family: 'PingFang';
-  src: url('../assets/fonts/PingFangLight.ttf') format('truetype');
+  src: url('../assets/fonts/PingFangSC-Light.woff');
+  // src:
+  //   url('../assets/fonts/PingFangLight.eot?#font-spider') format('embedded-opentype'),
+  //   url('../assets/fonts/PingFangLight.woff') format('woff'),
+  //   url('../assets/fonts/PingFangLight.ttf') format('truetype'),
+  //   url('../assets/fonts/PingFangLight.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
